// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransactionActionRow /> Approval should match snapshot 1`] = `
<tr
  class="my-dark-bg my-transactionactionrow my-dark-bg"
>
  <td>
    <div
      class="my-transactionactionrow-action"
    >
      <span
        class="my-icon my-size-xl my-transactionactionrow-icon my-alt"
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check-circle fa-w-16 "
            data-icon="check-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span>
        <span>
          Approved
        </span>
      </span>
    </div>
  </td>
  <td
    class="my-text-center"
  >
    <span
      class="my-time"
    >
      11:22
    </span>
  </td>
  <td
    class="my-d-min-xs my-text-center"
  >
    <span>
      <a
        class="my-clickable  my-link my-light-fg"
        href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
        rel="noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="my-badge my-light-bg  my-clickable"
        >
          <span
            class="my-icon  "
          >
            <span
              class=" "
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-wallet fa-w-16 "
                data-icon="wallet"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="my-icon-label "
            >
              My Wallet
            </span>
          </span>
        </span>
      </a>
    </span>
  </td>
  <td
    class="my-text-center"
  >
    <a
      class="my-clickable my-size-l my-ulink my-secondary-fg"
      href="https://etherscan.io/tx/0x0000000000000000000000000000000000000000000000000000000000000001"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
      title="Etherscan"
    >
      <div
        class="my-etherscanlink-img"
      >
        <img
          src="/images/etherscan.svg"
        />
      </div>
    </a>
  </td>
</tr>
`;

exports[`<TransactionActionRow /> Buy should match snapshot 1`] = `
<tr
  class="my-dark-bg my-transactionactionrow my-positive-bg"
>
  <td>
    <div
      class="my-transactionactionrow-action"
    >
      <span
        class="my-icon my-size-xl my-transactionactionrow-icon my-alt"
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-plus-circle fa-w-16 "
            data-icon="plus-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span>
        <span>
          <span
            class="my-badge my-light-bg  "
          >
            <span
              class="my-tokenamount-symbol"
            >
              TKN-2
            </span>
            <span
              class="my-tokenamount-amount"
            >
               NaN
            </span>
          </span>
          <span>
             for 
          </span>
          <span
            class="my-badge my-light-bg  "
          >
            <span
              class="my-tokenamount-symbol"
            >
              ETH
            </span>
            <span
              class="my-tokenamount-amount"
            >
               NaN
            </span>
          </span>
        </span>
      </span>
    </div>
  </td>
  <td
    class="my-text-center"
  >
    <span
      class="my-time"
    >
      11:22
    </span>
  </td>
  <td
    class="my-d-min-xs my-text-center"
  >
    <span>
      <a
        class="my-clickable  my-link my-light-fg"
        href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
        rel="noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="my-badge my-light-bg  my-clickable"
        >
          <span
            class="my-icon  "
          >
            <span
              class=" "
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-wallet fa-w-16 "
                data-icon="wallet"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="my-icon-label "
            >
              My Wallet
            </span>
          </span>
        </span>
      </a>
    </span>
  </td>
  <td
    class="my-text-center"
  >
    <a
      class="my-clickable my-size-l my-ulink my-secondary-fg"
      href="https://etherscan.io/tx/0x0000000000000000000000000000000000000000000000000000000000000001"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
      title="Etherscan"
    >
      <div
        class="my-etherscanlink-img"
      >
        <img
          src="/images/etherscan.svg"
        />
      </div>
    </a>
  </td>
</tr>
`;

exports[`<TransactionActionRow /> Default should match snapshot 1`] = `
<tr
  class="my-dark-bg my-transactionactionrow my-dark-bg"
>
  <td>
    <div
      class="my-transactionactionrow-action"
    >
      <span
        class="my-icon my-size-xl my-transactionactionrow-icon my-alt"
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-question-circle fa-w-16 "
            data-icon="question-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span>
        <span>
          Unknown action
        </span>
      </span>
    </div>
  </td>
  <td
    class="my-text-center"
  >
    <span
      class="my-time"
    >
      11:22
    </span>
  </td>
  <td
    class="my-d-min-xs my-text-center"
  >
    <span>
      <a
        class="my-clickable  my-link my-light-fg"
        href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
        rel="noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="my-badge my-light-bg  my-clickable"
        >
          <span
            class="my-icon  "
          >
            <span
              class=" "
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-wallet fa-w-16 "
                data-icon="wallet"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="my-icon-label "
            >
              My Wallet
            </span>
          </span>
        </span>
      </a>
    </span>
  </td>
  <td
    class="my-text-center"
  >
    <a
      class="my-clickable my-size-l my-ulink my-secondary-fg"
      href="https://etherscan.io/tx/0x0000000000000000000000000000000000000000000000000000000000000001"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
      title="Etherscan"
    >
      <div
        class="my-etherscanlink-img"
      >
        <img
          src="/images/etherscan.svg"
        />
      </div>
    </a>
  </td>
</tr>
`;

exports[`<TransactionActionRow /> Sell should match snapshot 1`] = `
<tr
  class="my-dark-bg my-transactionactionrow my-negative-bg"
>
  <td>
    <div
      class="my-transactionactionrow-action"
    >
      <span
        class="my-icon my-size-xl my-transactionactionrow-icon my-alt"
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-minus-circle fa-w-16 "
            data-icon="minus-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zM124 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H124z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span>
        <span>
          <span
            class="my-badge my-light-bg  "
          >
            <span
              class="my-tokenamount-symbol"
            >
              TKN-1
            </span>
            <span
              class="my-tokenamount-amount"
            >
               NaN
            </span>
          </span>
          <span>
             for 
          </span>
          <span
            class="my-badge my-light-bg  "
          >
            <span
              class="my-tokenamount-symbol"
            >
              ETH
            </span>
            <span
              class="my-tokenamount-amount"
            >
               NaN
            </span>
          </span>
        </span>
      </span>
    </div>
  </td>
  <td
    class="my-text-center"
  >
    <span
      class="my-time"
    >
      11:22
    </span>
  </td>
  <td
    class="my-d-min-xs my-text-center"
  >
    <span>
      <a
        class="my-clickable  my-link my-light-fg"
        href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
        rel="noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="my-badge my-light-bg  my-clickable"
        >
          <span
            class="my-icon  "
          >
            <span
              class=" "
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-wallet fa-w-16 "
                data-icon="wallet"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="my-icon-label "
            >
              My Wallet
            </span>
          </span>
        </span>
      </a>
    </span>
  </td>
  <td
    class="my-text-center"
  >
    <a
      class="my-clickable my-size-l my-ulink my-secondary-fg"
      href="https://etherscan.io/tx/0x0000000000000000000000000000000000000000000000000000000000000001"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
      title="Etherscan"
    >
      <div
        class="my-etherscanlink-img"
      >
        <img
          src="/images/etherscan.svg"
        />
      </div>
    </a>
  </td>
</tr>
`;

exports[`<TransactionActionRow /> Transfer should match snapshot 1`] = `
<tr
  class="my-dark-bg my-transactionactionrow my-dark-bg"
>
  <td>
    <div
      class="my-transactionactionrow-action"
    >
      <span
        class="my-icon my-size-xl my-transactionactionrow-icon my-alt"
      >
        <span
          class=" "
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-arrow-alt-circle-right fa-w-16 "
            data-icon="arrow-alt-circle-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zM140 300h116v70.9c0 10.7 13 16.1 20.5 8.5l114.3-114.9c4.7-4.7 4.7-12.2 0-16.9l-114.3-115c-7.6-7.6-20.5-2.2-20.5 8.5V212H140c-6.6 0-12 5.4-12 12v64c0 6.6 5.4 12 12 12z"
              fill="currentColor"
            />
          </svg>
        </span>
      </span>
      <span>
        <span>
          <span
            class="my-badge my-light-bg  "
          >
            <span
              class="my-tokenamount-symbol"
            >
              TKN-1
            </span>
            <span
              class="my-tokenamount-amount"
            >
               NaN
            </span>
          </span>
          <span>
             to 
          </span>
          <span>
            <a
              class="my-clickable  my-link my-secondary-fg"
              href="https://etherscan.io/address/0x0000000000000000000000000000000000000222"
              rel="noreferrer"
              tabindex="0"
              target="_blank"
            >
              <span
                class="my-badge my-light-bg  my-clickable"
              >
                <span
                  class="my-icon  "
                >
                  <span
                    class=" "
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-coins fa-w-16 "
                      data-icon="coins"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 405.3V448c0 35.3 86 64 192 64s192-28.7 192-64v-42.7C342.7 434.4 267.2 448 192 448S41.3 434.4 0 405.3zM320 128c106 0 192-28.7 192-64S426 0 320 0 128 28.7 128 64s86 64 192 64zM0 300.4V352c0 35.3 86 64 192 64s192-28.7 192-64v-51.6c-41.3 34-116.9 51.6-192 51.6S41.3 334.4 0 300.4zm416 11c57.3-11.1 96-31.7 96-55.4v-42.7c-23.2 16.4-57.3 27.6-96 34.5v63.6zM192 160C86 160 0 195.8 0 240s86 80 192 80 192-35.8 192-80-86-80-192-80zm219.3 56.3c60-10.8 100.7-32 100.7-56.3v-42.7c-35.5 25.1-96.5 38.6-160.7 41.8 29.5 14.3 51.2 33.5 60 57.2z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="my-icon-label "
                  >
                    Token 2 (TKN-2)
                  </span>
                </span>
              </span>
            </a>
          </span>
        </span>
      </span>
    </div>
  </td>
  <td
    class="my-text-center"
  >
    <span
      class="my-time"
    >
      11:22
    </span>
  </td>
  <td
    class="my-d-min-xs my-text-center"
  >
    <span>
      <a
        class="my-clickable  my-link my-light-fg"
        href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
        rel="noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="my-badge my-light-bg  my-clickable"
        >
          <span
            class="my-icon  "
          >
            <span
              class=" "
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-wallet fa-w-16 "
                data-icon="wallet"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M461.2 128H80c-8.84 0-16-7.16-16-16s7.16-16 16-16h384c8.84 0 16-7.16 16-16 0-26.51-21.49-48-48-48H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h397.2c28.02 0 50.8-21.53 50.8-48V176c0-26.47-22.78-48-50.8-48zM416 336c-17.67 0-32-14.33-32-32s14.33-32 32-32 32 14.33 32 32-14.33 32-32 32z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="my-icon-label "
            >
              My Wallet
            </span>
          </span>
        </span>
      </a>
    </span>
  </td>
  <td
    class="my-text-center"
  >
    <a
      class="my-clickable my-size-l my-ulink my-secondary-fg"
      href="https://etherscan.io/tx/0x0000000000000000000000000000000000000000000000000000000000000001"
      rel="noreferrer"
      tabindex="0"
      target="_blank"
      title="Etherscan"
    >
      <div
        class="my-etherscanlink-img"
      >
        <img
          src="/images/etherscan.svg"
        />
      </div>
    </a>
  </td>
</tr>
`;
